[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Enemies/snakeSlime.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemies/snakeSlime_ani.png" type="Texture" id=2]
[ext_resource path="res://src/Snake.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.695
height = 99.0019

[sub_resource type="CircleShape2D" id=3]
radius = 107.733

[node name="Snake" type="Area2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.18921, 3.56763 )
shape = SubResource( 2 )

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Snake_body_entered"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
